--- a/src/Card.css
+++ b/src/Card.css
@@ -1,3 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
 .card-star {
     width: 20px;
 }
@@ -5,6 +14,9 @@
 .card {
     width: 300px;
     font-size: 22px;
+    flex: 0 0 auto;         
+    display: flex;          
+    flex-direction: column; 
 }
 
 .card-image {
@@ -23,4 +35,11 @@
 
 .price {
     font-weight: bold;
+}
+
+.cards-list {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    overflow-x: auto;
 }
